@@ -94,7 +94,8 @@ public class CxxPreprocessAndCompileTest {
   private static final String DEFAULT_OUTPUT = "test.o";
   private static final SourcePath DEFAULT_INPUT = FakeSourcePath.of("test.cpp");
   private static final CxxSource.Type DEFAULT_INPUT_TYPE = CxxSource.Type.CXX;
-  private static final Path DEFAULT_WORKING_DIR = Paths.get(System.getProperty("user.dir"));
+  private static final PathSourcePath DEFAULT_WORKING_DIR =
+      FakeSourcePath.of(System.getProperty("user.dir"));
   private static final RuleKeyAppendableFunction<FrameworkPath, Path>
       DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION =
           new DefaultFramworkPathSearchPathAppendableFunction();
@@ -372,9 +373,9 @@ public class CxxPreprocessAndCompileTest {
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
+            .add("-o", "buck-out/gen/foo/bar__/test.o")
             .add("-c")
             .add(input.toString())
-            .add("-o", "buck-out/gen/foo/bar__/test.o")
             .build();
     ImmutableList<String> actualCompileCommand =
         buildRule.makeMainStep(pathResolver, false).getCommand();
